--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.3",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
